--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ Node classification con GCN\musae_git_edges.csv
 Node classification con GCN\musae_git_features.json
 Node classification con GCN\musae_git_target.csv
 Node classification con GCN\test.txt
+Node classification con GCN/.ipynb_checkpoints/
+The Ultimate Graph Neural Network Course/
